--- a/config.yaml
+++ b/config.yaml
@@ -27,7 +27,7 @@ life_cycle: 'pre-alpha'
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://github.com/fishtree-attempt/SDC-BIDS-EEG-EEGLAB/'
+source: 'https://github.com/carpentries-incubator/SDC-BIDS-EEG-EEGLAB'
 
 # Default branch of your lesson
 branch: 'main'
@@ -78,7 +78,6 @@ profiles:
 # sandpaper and varnish versions) should live
 
 
-url: https://preview.carpentries.org/SDC-BIDS-EEG-EEGLAB
+url: 'https://carpentries-incubator.github.io/SDC-BIDS-EEG-EEGLAB'
 analytics: carpentries
 lang: en
-workbench-beta: yes
